--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+*.classpath
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -7,6 +8,8 @@
 *.jar
 *.war
 *.ear
+*.DS_Store
+*gwt-unitCache
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
