--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/qingyili/Desktop/310workspace/opencsv-3.0.jar"/>
+	<classpathentry kind="lib" path="D:/Dropbox/BCS/COURSES/2014 Winter/CPSC 310 Intro Software Engineering/Term Project/gwt-maps.jar"/>
+	<classpathentry kind="lib" path="D:/Dropbox/BCS/COURSES/2014 Winter/CPSC 310 Intro Software Engineering/Term Project/opencsv-3.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
