--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 bin/*
 *.class
-*.classpath
+.classpath
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,6 +10,9 @@ bin/*
 *.war
 *.ear
 *.DS_Store
+*/.DS_Store
+.DS_Store
+.DS_Store?
 *gwt-unitCache
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
