create favorite objcet and servlet files

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -29,10 +29,10 @@
     <servlet-class>com.project.LibraryLocator.server.LibraryServiceImpl</servlet-class>
   </servlet>
   
-<!--   <servlet> -->
-<!--     <servlet-name>DataParseImpl</servlet-name> -->
-<!--     <servlet-class>com.project.LibraryLocator.server.DataParseImpl</servlet-class> -->
-<!--   </servlet> -->
+  <servlet>
+    <servlet-name>FavoriteService</servlet-name>
+    <servlet-class>com.project.LibraryLocator.server.FavoriteServiceImpl</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>loginService</servlet-name>
@@ -44,10 +44,10 @@
     <url-pattern>/librarylocator/Library</url-pattern>
   </servlet-mapping>
   
-<!--   <servlet-mapping> -->
-<!--     <servlet-name>DataParseImpl</servlet-name> -->
-<!--     <url-pattern>/librarylocator/Data</url-pattern> -->
-<!--   </servlet-mapping> -->
+  <servlet-mapping>
+    <servlet-name>FavoriteService</servlet-name>
+    <url-pattern>/librarylocator/Favorite</url-pattern>
+  </servlet-mapping>
 
 
 
